Add article BeOpinion page. Add callbacks for ad API and resizing.

--- a/examples/ads.amp.html
+++ b/examples/ads.amp.html
@@ -95,6 +95,7 @@
         <option>appnexus</option>
         <option>appvador</option>
         <option>atomx</option>
+        <option>beopinion</option>
         <option>bidtellect</option>
         <option>brainy</option>
         <option>bringhub</option>
@@ -497,6 +498,14 @@
   <amp-ad width="300" height="250"
       type="atomx"
       data-id="1234">
+  </amp-ad>
+
+  <amp-ad width="300" height="1"
+      type="beopinion"
+      layout="responsive"
+      data-name="slot_0"
+      data-my-content="0"
+      data-account="556f2afc6ebef601004fb60f">
   </amp-ad>
 
   <h2 id="bidtellect">Bidtellect</h2>
@@ -1550,6 +1559,6 @@
       type="zucks"
       data-frame-id="_bda46cf5ac">
   </amp-ad>
-  
+
 </body>
 </html>
