--- a/examples/beopinion.amp.html
+++ b/examples/beopinion.amp.html
@@ -20,8 +20,9 @@
 
   <amp-beopinion width="375" height="1"
       layout="responsive"
-      data-account="589446dd42ee0d6fdd9c3dfd"
-      data-content="5a703a2f46e0fb00016d51b3">
+      data-account="aaaaaaaaaaaaaaaaaaaaaaaa"
+      data-content="5a8abaaeb9d82100010fb72e"
+      >
   </amp-beopinion>
 
   <amp-ad width="300" height="1"
@@ -29,7 +30,7 @@
       layout="responsive"
       data-name="slot_0"
       data-my-content="0"
-      data-account="556f2afc6ebef601004fb60f">
+      data-account="aaaaaaaaaaaaaaaaaaaaaaaa">
   </amp-ad>
 
   <!-- <h2>Intentionally non-existing content</h2> -->
